<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activitys.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/logo_margin_top"
                android:src="@drawable/logo_nutrisolver_reduzido"
                android:contentDescription="imagem logo" />

            <LinearLayout
                android:fitsSystemWindows="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/img_logo"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="80dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="40dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:autofillHints="username"
                        tools:targetApi="o" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/senha"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_senha"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:autofillHints="password"
                        tools:targetApi="o" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/repita_a_senha"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="15dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_input_senha_repetir"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:autofillHints="password"
                        tools:targetApi="o" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_width="match_parent"
                    style="@style/botao_confirmar"
                    android:id="@+id/btn_registrar"
                    android:text="@string/Registrar"
                    android:onClick="registrar"/>

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/register_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"/>

</FrameLayout>